# gnzb

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
plugins/pycxx-6.2.6/Src/: libgnzbpy2_la-IndirectPythonInterface.lo
plugins/pycxx-6.2.6/Src/.deps/: libgnzbpy2_la-IndirectPythonInterface.Plo
plugins/pycxx-6.2.6/Src/Python2/: libgnzbpy2_la-cxx_extensions.lo  libgnzbpy2_la-cxxextensions.lo  libgnzbpy2_la-cxxsupport.lo
plugins/pycxx-6.2.6/Src/Python2/.deps/: libgnzbpy2_la-cxx_extensions.Plo  libgnzbpy2_la-cxxextensions.Plo  libgnzbpy2_la-cxxsupport.Plo
plugins/pycxx-6.2.6/Src/Python3/: libgnzbpy3_la-cxx_extensions.lo  libgnzbpy3_la-cxxextensions.lo  libgnzbpy3_la-cxxsupport.lo
plugins/pycxx-6.2.6/Src/Python3/.deps/: libgnzbpy3_la-cxx_extensions.Plo  libgnzbpy3_la-cxxextensions.Plo  libgnzbpy3_la-cxxsupport.Plo
plugins/python2/: Makefile.am  configure.ac
plugins/python2/src/: Makefile.am  main.cpp  pygnzb.cpp  pygnzb.h  util.cpp  util.h
plugins/python2/src/module/: gnzbmodule.cpp  gnzbmodule.h
plugins/python2/src/pyobject/: gnzbpyobject.cpp  gnzbpyobject.h
plugins/python3/: Makefile.am  configure.ac
plugins/python3/src/: Makefile.am  main.cpp  pygnzb.cpp  util.cpp  util.h
plugins/python3/src/module/: gnzbmodule.cpp  gnzbmodule.h
plugins/python3/src/pyobject/: gnzbpyobject.cpp  gnzbpyobject.h
plugins/pywrap/: libgnzbpy2_la-pythonmodule.lo  libgnzbpy2_la-pythonobject.lo  libgnzbpy2_la-pythontypes.lo  libgnzbpy2_la-pythonutil.lo  libgnzbpy3_la-pythonmodule.lo  libgnzbpy3_la-pythonobject.lo  libgnzbpy3_la-pythontypes.lo  libgnzbpy3_la-pythonutil.lo  pythonmodule.cpp  pythonmodule.h  pythonobject.cpp  pythonobject.h  pythontypes.cpp  pythontypes.h  pythonutil.cpp  pythonutil.h
plugins/pywrap/.deps/: libgnzbpy2_la-pythonmodule.Plo  libgnzbpy2_la-pythonobject.Plo  libgnzbpy2_la-pythontypes.Plo  libgnzbpy2_la-pythonutil.Plo  libgnzbpy3_la-pythonmodule.Plo  libgnzbpy3_la-pythonobject.Plo  libgnzbpy3_la-pythontypes.Plo  libgnzbpy3_la-pythonutil.Plo
src/: Makefile.am  application-gnzb.cpp  application.cpp  application.h  gnzb.cpp  gnzb.h  main.cpp  movequeue.h  msgqueue.h  runtimesettings.cpp  runtimesettings.h  uiresource.h  uiresources.xml
src/db/: gnzb-sys.sql  gnzbdb.cpp  gnzbdb.h  gnzbgroups.cpp  gnzbgroups.h  nzbdb.cpp  nzbdb.h  preferences.cpp  preferences.h  sqlitedb.cpp  sqlitedb.h
src/gui/: appwindow-idle.cpp  appwindow.cpp  appwindow.h  downloadspeedgraph.cpp  downloadspeedgraph.h  filedrophandler.cpp  filedrophandler.h  guignzb.cpp  guignzb.h  guiutil.cpp  guiutil.h  mainwin.ui  nzbdlinfobar.cpp  nzbdlinfobar.h  nzbdlinfoitem.cpp  nzbdlinfoitem.h  nzbfilechooser.cpp  nzbfilechooser.h  nzbfileliststore.cpp  nzbfileliststore.h  nzbfiletreeview.cpp  nzbfiletreeview.h  nzbliststore.cpp  nzbliststore.h  nzbsummarywindow.cpp  nzbsummarywindow.h  nzbtreeview.cpp  nzbtreeview.h  statusbarwindow.cpp  statusbarwindow.h
src/gui/about/: about.ui
src/gui/cellrenderer/: bulletpointrenderer.cpp  bulletpointrenderer.h  gnzbactioncellrenderer.cpp  gnzbactioncellrenderer.h  gnzbcellrenderer.cpp  gnzbcellrenderer.h  nzbfilecellrenderer.cpp  nzbfilecellrenderer.h
src/gui/groups/: gnzbgroupsmenu.cpp  gnzbgroupsmenu.h  groups.ui  groupsinterface.cpp  groupsinterface.h  groupsliststore.cpp  groupsliststore.h
src/gui/menus/: appmenu.cpp  appmenu.h  menuactions.cpp  menuactions.h
src/gui/preferences/: SelectDownloadLocationInterface.cpp  SelectDownloadLocationInterface.h  locationsinterface.cpp  locationsinterface.h  nntpserverinterface.cpp  nntpserverinterface.h  notificationsinterface.cpp  notificationsinterface.h  preferences.ui  preferencesinterface.cpp  preferencesinterface.h  preferencespage.cpp  preferencespage.h  scriptsinterface.cpp  scriptsinterface.h
src/gui/preferences/widgets/: fileliststore.cpp  fileliststore.h  filenamehelper.h  folderselectionliststore.cpp  folderselectionliststore.h  fsitemliststore.cpp  fsitemliststore.h  nntpserverliststore.cpp  nntpserverliststore.h  singlefileliststore.cpp  singlefileliststore.h
src/gui/toolbar/: toggletoolbutton.cpp  toggletoolbutton.h  toolbar.cpp  toolbar.h  toolbutton.cpp  toolbutton.h
src/icons/: appicon64.xcf
src/icons/toolbar/: summary-selected.png-bak  summary.png-bak
src/nntp/: articlefetchpool.cpp  articlefetchpool.h  articlefetchtask.cpp  articlefetchtask.h  fetch.cpp  fetch.h  fetchmsg.cpp  fetchmsg.h
src/plugin/: gnzbplugin.h  pluginmodule.cpp  pluginmodule.h  scriptplugin.cpp  scriptplugin.h
src/util/: nzbutil.cpp  nzbutil.h  recttools.cpp  recttools.h  sizeformat.cpp  sizeformat.h  sysutil.cpp  sysutil.h
